completo controller project taskitem

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -6,10 +6,11 @@
     }
   },
   "AllowedHosts": "*",
+
   "ConnectionStrings": {
     // ¡IMPORTANTE! Para desarrollo con Docker Compose, usa el nombre del servicio de tu DB.
     // Si tu servicio de DB en docker-compose.yml se llama 'sqldb', entonces Server=sqldb
     "DefaultConnection": "Server=sqldb;Database=TaskManagementDb;User Id=sa;Password=TuPassword123$;Encrypt=False;TrustServerCertificate=True;"
   },
-  "CorsOrigins": "http://localhost:4200,http://localhost:3000,http://localhost:5000" // Ejemplo de CORS
+  "CorsOrigins": "http://localhost:5173,http://localhost:3000,http://127.0.0.1:5173"
 }
