quitamos la configuracion de docker

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sqldb;Database=TaskManagementDb;User Id=sa;Password=TuPassword123$;Encrypt=False;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(localDb)\\MSSQLLocalDB;Database=TaskManagementDb;Trusted_Connection=True;"
   },
   "CorsOrigins": "http://localhost:5173,http://localhost:3000,http://127.0.0.1:5173"
 }
+
