--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -10,5 +10,5 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=sqldb;Database=TaskManagementDb;User Id=sa;Password=TuPassword123$;Encrypt=False;TrustServerCertificate=True;"
   },
-  "CorsOrigins": "http://localhost:5173,http://localhost:3000,http://127.0.0.1:5173"
+  "CorsOrigins": "https://gentle-wave-0b31d0310.1.azurestaticapps.net/"
 }
