Finalizo cambios en creando-test para pasar a main

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sqldb;Database=TaskManagementDb;User Id=sa;Password=TuPassword123$;Encrypt=False;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=(localDb)\\MSSQLLocalDB;Database=TaskManagementDb;Trusted_Connection=True;"
   },
-  "CorsOrigins": "https://gentle-wave-0b31d0310.1.azurestaticapps.net/"
+  "CorsOrigins": "http://localhost:5173"
 }
